--- a/html/main.html
+++ b/html/main.html
@@ -166,7 +166,7 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   transition: all 0.3s ease;
   border-radius: 10px;
-  margin-left: 50%;
+  
 }
 
 .bottomofpage img:hover {
@@ -183,7 +183,7 @@
 .bottomofpage {
   margin-top: 2rem; 
   text-align: center;
-  margin-right: 20%;
+ 
 }
 
 .column img {
@@ -254,6 +254,19 @@
   <div class="column">
     <div class ="bottomofpage">
      <img src="Pollen.png">
+  </div>
+</div>
+
+<div class="row">
+  <div class="column">
+    <div class ="bottomofpage">
+     <img src="Pollen.png">
+  </div>
+  <div class="column">
+    <div class="preview">
+    <h2>Our Mission</h2>
+    <p>P.A.M (Pollen Alert Monitor) is dedicated to providing accurate, real-time pollen information to help you manage allergies and plan your day better.</p>
+  </div>
   </div>
 </div>
 
