--- a/html/types.html
+++ b/html/types.html
@@ -167,7 +167,7 @@
   <nav>
     <img src="../LOGO.png" alt="PAM Logo" class="logo">
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="main.html">Home</a></li>
       <li><a href="types.html">Pollen Types</a></li>
       <li><a href="data.html">Data Trends</a></li>
       <li><a href="about.html">About</a></li>
