--- a/html/data.html
+++ b/html/data.html
@@ -26,22 +26,24 @@
       transform: translateY(-50%);
       height: 200px;
     }
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-    }
-    nav a {
-      color: #F5F5DC;
-      text-decoration: none;
-      padding: 0.5rem 1rem;
-    }
-    nav a:hover {
-      background: #7A8471;
-    }
+       nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+        }
+
+        nav a {
+            color: #F5F5DC;
+            text-decoration: none;
+            padding: 0.5rem 1rem;
+        }
+
+        nav a:hover {
+            background: #7A8471;
+        }
     h1 {
       text-align: center;
       margin: 2rem 0;
@@ -85,15 +87,16 @@
   </style>
 </head>
 <body>
-  <nav>
-    <img src="../LOGO.png" alt="PAM Logo" class="logo">
+<nav>
+    <img src="LOGO.png" alt="PAM Logo" class="logo">
     <ul>
-      <li><a href="main.html">Home</a></li>
-      <li><a href="types.html">Pollen Types</a></li>
-      <li><a href="data.html">Data Trends</a></li>
-      <li><a href="about.html">About</a></li>
+        <li><a href="main.html">Home</a></li>
+        <li><a href="types.html">Pollen Types</a></li>
+        <li><a href="data.html">Data Trends</a></li>
+        <li><a href="ndvi.html">Forecast</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
-  </nav>
+</nav>
   
   <h1>Data Trends</h1>
   
